--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="src/assets/logo-ico.png" type="image/png">
   <title>Phoenix - Processo Seletivo Agente Comercial</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            'phoenix-magenta': '#A70240',
-            'phoenix-dark': '#000000',
-            'phoenix-black': '#000000',
-            'phoenix-light': '#111111',
-            'phoenix-gray': '#333333',
-            'phoenix-text': '#ffffff'
-          }
-        }
-      }
-    }
-  </script>
 </head>
 
 <body class="bg-black font-sans text-gray-100">
@@ -317,20 +300,20 @@
         <div class="w-20 h-1 bg-phoenix-magenta mx-auto mb-12"></div>
         
         <div class="grid md:grid-cols-2 gap-8 mb-12">
-          <div class="flex items-center justify-center md:justify-end">
-            <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center">
+          <div class="flex items-center justify-start">
+            <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center flex-shrink-0">
               <i class="fas fa-envelope text-xl"></i>
             </div>
             <div class="text-left">
               <h3 class="font-bold text-lg mb-1">E-mail</h3>
-              <a href="mailto:phoenixschool10@gmail.com" class="text-gray-300 hover:text-phoenix-magenta transition">
+              <a href="mailto:phoenixschool10@gmail.com" class="text-gray-300 hover:text-phoenix-magenta transition break-all">
                 phoenixschool10@gmail.com
               </a>
             </div>
           </div>
           
-          <div class="flex items-center justify-center md:justify-start">
-            <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center">
+          <div class="flex items-center justify-start">
+            <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center flex-shrink-0">
               <i class="fab fa-whatsapp text-xl"></i>
             </div>
             <div class="text-left">
