--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="src/assets/logo-ico.png" type="image/png">
   <title>Phoenix - Processo Seletivo Agente Comercial</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'phoenix-magenta': '#A70240',
+            'phoenix-dark': '#000000',
+            'phoenix-black': '#000000',
+            'phoenix-light': '#111111',
+            'phoenix-gray': '#333333',
+            'phoenix-text': '#ffffff'
+          }
+        }
+      }
+    }
+  </script>
 </head>
 
 <body class="bg-black font-sans text-gray-100">
