--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="custom.css" />
   <script>
     tailwind.config = {
       theme: {
@@ -282,8 +283,9 @@
 
             <!-- Loading -->
             <div id="loading" class="etapa">
-              <div class="loading-animation" role="status"></div>
-              <p>Enviando sua candidatura...</p>
+              <div class="loading-spinner"></div>
+              <p class="text-lg font-semibold">Enviando sua candidatura...</p>
+              <p class="text-sm text-gray-400 mt-2">Por favor, aguarde alguns instantes</p>
             </div>
 
             <!-- Confirmação -->
@@ -317,7 +319,7 @@
         <div class="w-20 h-1 bg-phoenix-magenta mx-auto mb-12"></div>
         
         <div class="grid md:grid-cols-2 gap-8 mb-12">
-          <div class="flex items-center justify-start">
+          <div class="flex items-center justify-start md:justify-end">
             <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center flex-shrink-0">
               <i class="fas fa-envelope text-xl"></i>
             </div>
@@ -329,7 +331,7 @@
             </div>
           </div>
           
-          <div class="flex items-center justify-start">
+          <div class="flex items-center justify-start md:justify-start">
             <div class="bg-phoenix-magenta text-white w-14 h-14 rounded-full mr-4 flex items-center justify-center flex-shrink-0">
               <i class="fab fa-whatsapp text-xl"></i>
             </div>
