--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
+  <!-- Performance: preconnect & preload webfonts to reduce FOUT -->
+  <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
+  <link rel="dns-prefetch" href="//raw.githubusercontent.com">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="https://raw.githubusercontent.com/phoenix-droid-art/phoenix-landing-page/refs/heads/main/src/fonts/Axiforma-Regular.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="https://raw.githubusercontent.com/phoenix-droid-art/phoenix-landing-page/refs/heads/main/src/fonts/Axiforma-Bold.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="https://raw.githubusercontent.com/phoenix-droid-art/phoenix-landing-page/refs/heads/main/src/fonts/AcuminVariableConcept.woff2">
   <script>
     tailwind.config = {
       theme: {
