--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- Performance: preconnect & preload webfonts to reduce FOUT -->
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="dns-prefetch" href="//raw.githubusercontent.com">
-  <link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Axiforma-Regular.woff2">
-  <link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Axiforma-Bold.woff2">
-  <link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Acumin-Pro.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="./fonts/Axiforma-Regular.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="./fonts/Axiforma-Bold.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="./fonts/Acumin-Pro.woff2">
   <script>
     tailwind.config = {
       theme: {
